assets/stylesheets/common/discourse-reactions.scss
html.discourse-reactions-no-select {
  -webkit-touch-callout: none; /* Disables long-touch menu */
  -webkit-user-select: none; /* Disable text selection (for Webkit) */
  user-select: none; /* Disable text selection (standard syntax) */
}

.discourse-reactions-list {
  display: flex;
  align-items: center;
  justify-content: flex-end;

  .reactions {
    display: flex;
    align-items: center;

    .reaction {
      border-radius: 100px;
      width: 20px;
      height: 20px;
      display: flex;
      align-items: center;
      justify-content: center;

      &:nth-of-type(1n + 4) {
        display: none;
      }

      .emoji {
        width: 1.1em;
        height: 1.1em;
      }

      &:hover {
        .user-list {
          visibility: visible;
          opacity: 0.9;
        }
      }
    }

    .user-list {
      visibility: hidden;
      z-index: z("usercard") - 2;
      transition: opacity 0.33s;
      opacity: 0;
      padding: 0.5em 0;

      .container {
        margin-top: 0.5em;
        font-size: $font-down-2;
        background-color: var(--primary);
        color: var(--secondary-very-high);
        border-radius: 3px;
        padding: 1em;
        display: flex;
        flex-direction: column;

        .heading {
          font-weight: 700;
          font-size: $font-up-1;
          padding-bottom: 0.5em;
          text-align: left;
        }

        .username,
        .other-users {
          white-space: nowrap;
          text-align: left;
        }

        .other-users {
          padding-top: 0.25em;
          color: var(--secondary-high);
        }
      }
    }
  }

  .users {
    font-size: $font-down-1;
    color: var(--primary-medium);
    margin-left: 0.5em;
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    visibility: visible;
    opacity: 1;
  }
}

.discourse-reactions-picker {
  visibility: hidden;
  display: none;
  padding: 15px 0;
  z-index: z("usercard") - 2;
  position: relative;

  &.is-expanded {
    animation: 0.33s fadeIn;
    animation-fill-mode: forwards;
    display: flex;
  }

  .container {
    margin: 0.25em;
    box-shadow: shadow("card");
    background-color: var(--secondary);
    z-index: 1;
    border-radius: 2em;
  }

  .pickable-reaction {
    // TODO fix this in core
    padding: 0.25em !important;
    margin: 0.25em !important;
    border: 1px solid transparent !important;
    cursor: not-allowed;
    border-radius: 2em;

    .emoji {
      pointer-events: none;
      height: 1.2em;
      width: 1.2em;
    }

    &:not(.can-undo) {
      background: var(--primary-very-low);
    }

    &.can-undo {
      cursor: pointer;
      .discourse-no-touch & {
        &:hover {
          background: none !important;
          border-color: transparent !important;
          transform: scale(1.5);
        }
      }
    }

    &.is-used {
      border-color: $tertiary-low !important;
    }
  }
}

.discourse-reactions-state-panel {
  min-width: 235px;
  max-width: 275px;
  visibility: hidden;
  display: none;
  padding: 15px 0;
  z-index: z("usercard") - 2;
  position: relative;

  .discourse-reactions-state-panel-reaction .count {
    padding-right: 0.25em;
  }

  @for $i from 1 through 5 {
    &.max-length-#{$i} {
      .discourse-reactions-state-panel-reaction .count {
        width: #{$i * 10}px;
      }
    }
  }

  &.is-expanded {
    animation: 0.33s fadeIn;
    animation-fill-mode: forwards;
    display: flex;
  }

  .container {
    box-shadow: shadow("card");
    background-color: var(--secondary);
    display: flex;
    flex-direction: column;
    z-index: 1;
    padding: 0.25em;
    border: 1px solid var(--primary-low);
  }

  .counters {
    display: flex;
    flex-direction: column;
  }
}

.discourse-reactions-state-panel-reaction {
  border-bottom: 1px solid var(--primary-low);
  cursor: pointer;
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;

  &:first-child {
    padding-top: 0;
  }

  &:last-child {
    border: none;
    padding-bottom: 0;
  }

  .list {
    display: grid;
    grid-column-gap: 0.25em;
    grid-row-gap: 0.25em;
    padding-top: 0.25em;
    grid-template-rows: 22.5px;
  }

  @for $i from 1 through 9 {
    .list-columns-#{$i} {
      grid-template-columns: repeat($i, 22.5px);
    }
  }

  .users {
    display: flex;
    flex-direction: column;

    .trigger-user-card {
      width: 22.5px;
      height: 22.5px;
      display: flex;
      align-items: center;
      justify-content: center;
    }
  }

  .more {
    color: var(--primary-medium);
    font-size: $font-down-1;
    padding-top: 0.5em;
  }

  .reaction-wrapper {
    display: flex;
    align-items: center;
    justify-content: center;
    padding-top: 0.25em;

    .count {
      font-size: $font-down-1;
      color: var(--primary-medium);
      text-align: left;
      @include ellipsis;
    }

    .emoji-wrapper {
      width: 25px;
      height: 25px;
      display: flex;
      align-items: center;
      justify-content: center;
    }
  }

  .show-users {
    padding: 0 !important;
    margin: 0 !important;
    background: none !important;
    border-color: transparent !important;
    color: var(--primary-medium) !important;

    .d-icon {
      color: var(--primary-medium) !important;
      margin: 0;
    }
  }

  .count {
    color: var(--primary);
    font-size: $font-up-1;
    margin-left: 0.5em;
  }
}

.discourse-reactions-actions {
  display: inline-flex;
  justify-content: flex-end;

  &.has-reacted {
    &:not(.has-reactions) {
      .discourse-reactions-reaction-button .reaction-button {
        padding-left: 5px;
      }

      .discourse-reactions-counter {
        padding-right: 5px;
      }
    }

    .discourse-no-touch & {
      .discourse-reactions-double-button:hover {
        background: var(--primary-low);
      }
    }

    &.has-used-main-reaction {
      .discourse-reactions-reaction-button .reaction-button .d-icon {
        color: var(--love);
      }
    }

    &.can-toggle-reaction {
      .discourse-no-touch & {
        .discourse-reactions-reaction-button:hover .reaction-button {
          .d-icon {
            color: var(--primary-low-mid);
          }

          background: var(--primary-low);
        }
      }

      .discourse-reactions-reaction-button {
        cursor: pointer;
      }
    }

    &:not(.can-toggle-reaction) {
      .discourse-no-touch & {
        .discourse-reactions-reaction-button:hover .reaction-button {
          background: var(--primary-low);
        }
      }

      .discourse-reactions-reaction-button .reaction-button,
      .discourse-reactions-reaction-button {
        cursor: not-allowed;
      }
    }
  }

  &:not(.has-reacted) {
    &.my-post {
      .discourse-no-touch & {
        .discourse-reactions-double-button:hover {
          .d-icon {
            color: var(--primary-low-mid);
          }

          background: var(--primary-low);
        }
      }

      .discourse-reactions-reaction-button {
        cursor: default;
      }
    }

    &:not(.my-post) {
      .discourse-no-touch & {
        .discourse-reactions-double-button:hover,
        .discourse-reactions-reaction-button:hover .reaction-button {
          .d-icon {
            color: var(--love);
          }

          background: var(--love-low);
        }
      }

      .discourse-reactions-reaction-button {
        cursor: pointer;
      }
    }
  }
}

.discourse-reactions-double-button {
  display: inline-flex;
}

.discourse-reactions-reaction-button {
  position: relative;
  display: flex;
  touch-action: none;

  .btn-toggle-reaction-like {
    outline: none;
    pointer-events: none;
    background: none;
  }

  .btn-toggle-reaction-emoji {
    outline: none;
    pointer-events: none;
    background: none;
    width: 1em;
    height: 1em;
  }
}

.discourse-reactions-counter {
  display: flex;
  align-items: center;
  text-align: center;
  cursor: pointer;
  padding: 0 10px;

  .reactions-counter {
    font-size: $font-up-1;
    color: var(--primary-low-mid);
    display: flex;
    pointer-events: none;
    margin-left: 0.5em;
  }

  &.only-like {
    .reactions-counter {
      margin: 0;
    }
  }
}

nav.post-controls .actions {
  display: inline-flex;
}

nav.post-controls .actions button {
  display: inline-flex;
  align-items: center;
}

.discourse-reactions-my-reaction {
  margin-top: 8px;
  display: inline-flex;
  align-items: center;

  .reaction-emoji {
    margin-right: 5px;
    height: 15px;
  }
}

nav.post-controls .actions .reaction-button:focus {
  background: transparent;
  color: var(--primary-low-mid);
}

nav.post-controls .actions .reaction-button {
  margin: 0;
}

